# lsnz-django

./: .gitignore  pyproject.toml
lsnz/: adapter.py  admin.py  apps.py  forms.py  jinja2.py  models.py  urls.py  views.py
lsnz/content/: about.md  leagues.md  play.md  privacy.md  terms.md
lsnz/migrations/: 0001_initial.py  0002_alter_player_bio.py  0003_format_description.py  0004_tournamentseries_mazemap_tournament_series.py
lsnz/static/lsnz/: style.css
lsnz/templates/account/: base_entrance.html  base_manage.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  signup.html  verification_sent.html
lsnz/templates/allauth/layouts/: entrance.html  manage.html
lsnz/templates/errors/: 403.html  404.html
lsnz/templates/lsnz/: _post_preview.html  base.html  edit_profile.html  event_detail.html  events.html  format_detail.html  formats.html  player_detail.html  players.html  post_detail.html  post_editor.html  posts.html  register.html  site_detail.html  sites.html  system_detail.html  systems.html  text_page.html  tournament_detail.html  tournaments.html
lsnz/templates/socialaccount/: authentication_error.html  connections.html  login.html
mysite/: settings.py  urls.py
