[project]
name = "lsnz-django"
version = "0.1.0"
description = "Overaul of the LSNZ website using the Django framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-allauth[socialaccount]>=65.10.0",
    "django-autoslug>=1.9.9",
    "django-bootstrap5>=25.2",
    "django-crispy-forms>=2.4",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]